--- a/frontend/src/components/User/YourBookings/YourBooking.css
+++ b/frontend/src/components/User/YourBookings/YourBooking.css
@@ -76,19 +76,46 @@
     font-size: 1rem;
     cursor: pointer;
 }
-.model button{
 
+.model{
+    width: 100%;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+}
+.model p{
+    color:var(--black-color);
+    padding: 10px;
+}
+.btn{
     padding: 10px 60px;
     border: none;
     border-radius: 5px;
     outline: none;
     font-size: 1rem;
     cursor: pointer;
-    margin: 30px;
+    margin: 30px;   
 }
-.model p{
-    color:var(--black-color);
-    padding: 10px;
+.btn-s{
+    padding: 10px 30px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1rem;
+    cursor: pointer;
+    margin: 5px;
+}
+.btn-xs{
+    padding: 10px 10px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1rem;
+    cursor: pointer;
+    margin: 5px;
 }
 .btn-danger{
     background-color: rgb(243, 81, 81);
@@ -96,5 +123,17 @@
 }
 .btn-success{
     background-color: rgb(54, 225, 54);
+    color:var(--black-color);
+}
+.btn-danger:hover{
+    background-color: rgb(243, 81, 81);
+    color:var(--black-color);
+}
+.btn-success:hover{
+    background-color: rgb(54, 225, 54);
+    color:var(--black-color);
+}
+.btn-blue{
+    background-color:rgb(78, 194, 248);
     color:var(--black-color);
 }
