--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body{
   font-family: 'Poppins', sans-serif;
   color: var(--text-color);
@@ -18,6 +19,11 @@ input{
   font-family: 'Poppins', sans-serif;
 
 }
+.container{
+  max-width: 100%;
+
+}
+
 :root{
   --primary-color: #101010;
   --secondary-color: #0a0a0a;
