--- a/frontend/src/components/User/ProfileEdit/ProfileEdit.css
+++ b/frontend/src/components/User/ProfileEdit/ProfileEdit.css
@@ -27,6 +27,7 @@ margin-top: 40px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    color: black;
 }
 .profile-edit-body-left-input label{
     margin-top: 20px;
